--- a/app/src/main/res/layout/fragment_single_assignment.xml
+++ b/app/src/main/res/layout/fragment_single_assignment.xml
@@ -13,63 +13,41 @@
         app:cardElevation="12dp"
         app:cardPreventCornerOverlap="true">
 
-        <LinearLayout
+        <RelativeLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
-                android:orientation="horizontal"
+                android:id="@+id/card_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:background="@color/sakai_medium_red"
                 android:paddingBottom="16dp"
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:paddingTop="48dp">
 
-                <LinearLayout
-                    android:id="@+id/card_header"
-                    android:layout_width="0dp"
+                <TextView
+                    android:id="@+id/assignment_name"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/assignment_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
-                        android:layout_marginRight="32dp"
-                        android:maxLines="2"
-                        android:textColor="@color/sakai_light_silver"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        tools:text="Programming Assignment 1: Introduction to C" />
-
-                    <TextView
-                        android:id="@+id/assignment_date"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/sakai_light_silver"
-                        android:textSize="12sp"
-                        tools:text="Due: Feb 15, 2018 11:55 pm" />
-
-                </LinearLayout>
-
-                <!-- Textview for opening the bottom sheet dialog -->
-                <!-- MinWidth prevents button from having excess padding -->
-                <Button
-                    android:id="@+id/assignment_submit_button"
-                    android:text="\uf35d"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:minWidth="0dp"
-                    android:textColor="@color/sakai_light_black"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginRight="32dp"
+                    android:maxLines="2"
+                    android:textColor="@color/sakai_light_silver"
                     android:textSize="18sp"
-                    android:layout_marginRight="4dp"
-                    style="@style/FontawesomeText"
-                    android:layout_gravity="center_vertical|end"/>
+                    android:textStyle="bold"
+                    tools:text="Programming Assignment 1: Introduction to C" />
+
+                <TextView
+                    android:id="@+id/assignment_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/sakai_light_silver"
+                    android:textSize="12sp"
+                    tools:text="Due: Feb 15, 2018 11:55 pm" />
 
             </LinearLayout>
 
@@ -79,12 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/header"
-                app:layout_constraintVertical_bias="0.0"
-                app:layout_constraintHeight_default="wrap">
+                android:layout_below="@id/card_header">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -179,7 +152,7 @@
                         android:id="@+id/assignment_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="48dp"
                         android:layout_marginTop="8dp"
                         android:textSize="12sp" />
 
@@ -187,7 +160,20 @@
 
             </ScrollView>
 
-        </LinearLayout>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/assignment_submit_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="16dp"
+                app:srcCompat="@drawable/ic_open_in_new_black_24dp"
+                android:tint="@color/sakai_medium_silver" >
+
+            </android.support.design.widget.FloatingActionButton>
+
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
