--- a/app/src/main/res/layout/assignment_cell_layout.xml
+++ b/app/src/main/res/layout/assignment_cell_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="300dp"
-    android:layout_width="250dp"
+    android:layout_height="250dp"
+    android:layout_width="230dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="6dp"
     app:cardElevation="6dp"
@@ -30,12 +30,26 @@
                  all views have the same height -->
             <TextView
                 android:id="@+id/assignment_name"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:textColor="@color/white"
+                android:layout_weight="1"
+                android:textColor="@color/sakai_light_silver"
                 android:textStyle="bold"
                 android:lines="2"
                 android:maxLines="2"/>
+
+            <TextView
+                android:id="@+id/assignment_popup_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/sakai_medium_silver"
+                android:text="\uf142"
+                android:textSize="16sp"
+                android:lines="2"
+                android:maxLines="2"
+                android:paddingLeft="12dp"
+                android:paddingRight="8dp"
+                style="@style/FontawesomeText" />
 
         </LinearLayout>
 
@@ -81,7 +95,7 @@
                 android:id="@+id/assignment_date"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="@color/white"/>
+                android:textColor="@color/sakai_light_silver"/>
 
         </LinearLayout>
 
