--- a/app/src/main/res/layout/fragment_single_assignment.xml
+++ b/app/src/main/res/layout/fragment_single_assignment.xml
@@ -1,190 +1,198 @@
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.development.sakaiclientandroid.fragments.assignments.SingleAssignmentFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="12dp"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="12dp"
-    app:cardPreventCornerOverlap="true">
+    tools:context="com.example.development.sakaiclientandroid.fragments.assignments.SingleAssignmentFragment">
 
-    <RelativeLayout
-        android:orientation="vertical"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="12dp"
+        app:cardCornerRadius="4dp"
+        app:cardPreventCornerOverlap="true"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginTop="12dp">
 
         <RelativeLayout
-            android:id="@+id/card_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@color/sakai_medium_red"
-            android:paddingBottom="16dp"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:paddingTop="16dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/assignment_name"
+            <RelativeLayout
+                android:id="@+id/card_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:layout_marginRight="32dp"
-                android:maxLines="2"
-                android:textColor="@color/sakai_light_silver"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                tools:text="Programming Assignment 1: Introduction to C" />
+                android:orientation="vertical"
+                android:background="@color/sakai_medium_red"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="24dp">
 
-            <TextView
-                android:id="@+id/assignment_date"
-                android:layout_below="@id/assignment_name"
+                <TextView
+                    android:id="@+id/assignment_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginRight="32dp"
+                    android:maxLines="2"
+                    android:textColor="@color/sakai_light_silver"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    tools:text="Programming Assignment 1: Introduction to C" />
+
+                <TextView
+                    android:id="@+id/assignment_date"
+                    android:layout_below="@id/assignment_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/sakai_light_silver"
+                    android:textSize="12sp"
+                    tools:text="Due: Feb 15, 2018 11:55 pm" />
+
+                <TextView
+                    android:id="@+id/assignment_close_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@id/assignment_name"
+                    android:text="\uf00d"
+                    android:textColor="@color/sakai_light_silver"
+                    android:textSize="20sp"
+                    android:padding="8dp"
+                    android:background="?android:attr/selectableItemBackground"
+                    style="@style/FontawesomeText"/>
+
+            </RelativeLayout>
+
+            <ScrollView
+                android:id="@+id/body"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_below="@id/card_header">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TableLayout
+                        android:id="@+id/table_body"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="8dp">
+
+                        <TableRow android:layout_marginBottom="4dp">
+
+                            <TextView
+                                android:layout_width="135dp"
+                                android:text="Status" />
+
+                            <TextView
+                                android:id="@+id/assignment_status"
+                                android:layout_width="0dp"
+                                android:layout_gravity="end"
+                                android:layout_weight="1"
+                                android:textAlignment="textEnd"
+                                tools:text="Due Tomorrow" />
+                        </TableRow>
+
+                        <TableRow android:layout_marginBottom="4dp">
+
+                            <TextView android:text="Max Points" />
+
+                            <TextView
+                                android:id="@+id/assignment_max_grade"
+                                android:layout_width="0dp"
+                                android:layout_gravity="end"
+                                android:layout_weight="1"
+                                android:textAlignment="textEnd"
+                                tools:text="100" />
+                        </TableRow>
+
+                        <TableRow android:layout_marginBottom="4dp">
+
+                            <TextView android:text="Current Grade" />
+
+                            <TextView
+                                android:id="@+id/assignment_curr_grade"
+                                android:layout_width="0dp"
+                                android:layout_gravity="end"
+                                android:layout_weight="1"
+                                android:textAlignment="textEnd"
+                                tools:text="95" />
+                        </TableRow>
+
+                        <TableRow android:layout_marginBottom="4dp">
+
+                            <TextView android:text="Allows Resubmissions" />
+
+                            <TextView
+                                android:id="@+id/assignment_allows_resubmission"
+                                android:layout_width="0dp"
+                                android:layout_gravity="end"
+                                android:layout_weight="1"
+                                android:textAlignment="textEnd"
+                                tools:text="Yes" />
+                        </TableRow>
+
+                    </TableLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="Attachments"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/assignment_attachments"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Instructions"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/assignment_description"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="48dp"
+                        android:layout_marginTop="8dp"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+            </ScrollView>
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/assignment_submit_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/sakai_light_silver"
-                android:textSize="12sp"
-                tools:text="Due: Feb 15, 2018 11:55 pm" />
-
-            <TextView
-                style="@style/FontawesomeText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignTop="@id/assignment_name"
-                android:text="\uf00d"
-                android:textColor="@color/sakai_light_silver"
-                android:textSize="20sp"
-                android:paddingRight="8dp"
-                android:paddingLeft="8dp"/>
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="16dp"
+                app:srcCompat="@drawable/ic_open_in_new_24dp"
+                android:tint="@color/sakai_medium_silver" >
+
+            </android.support.design.widget.FloatingActionButton>
 
         </RelativeLayout>
 
-        <ScrollView
-            android:id="@+id/body"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_marginBottom="8dp"
-            android:layout_below="@id/card_header">
+    </android.support.v7.widget.CardView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TableLayout
-                    android:id="@+id/table_body"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="8dp">
-
-                    <TableRow android:layout_marginBottom="4dp">
-
-                        <TextView
-                            android:layout_width="135dp"
-                            android:text="Status" />
-
-                        <TextView
-                            android:id="@+id/assignment_status"
-                            android:layout_width="0dp"
-                            android:layout_gravity="end"
-                            android:layout_weight="1"
-                            android:textAlignment="textEnd"
-                            tools:text="Due Tomorrow" />
-                    </TableRow>
-
-                    <TableRow android:layout_marginBottom="4dp">
-
-                        <TextView android:text="Max Points" />
-
-                        <TextView
-                            android:id="@+id/assignment_max_grade"
-                            android:layout_width="0dp"
-                            android:layout_gravity="end"
-                            android:layout_weight="1"
-                            android:textAlignment="textEnd"
-                            tools:text="100" />
-                    </TableRow>
-
-                    <TableRow android:layout_marginBottom="4dp">
-
-                        <TextView android:text="Current Grade" />
-
-                        <TextView
-                            android:id="@+id/assignment_curr_grade"
-                            android:layout_width="0dp"
-                            android:layout_gravity="end"
-                            android:layout_weight="1"
-                            android:textAlignment="textEnd"
-                            tools:text="95" />
-                    </TableRow>
-
-                    <TableRow android:layout_marginBottom="4dp">
-
-                        <TextView android:text="Allows Resubmissions" />
-
-                        <TextView
-                            android:id="@+id/assignment_allows_resubmission"
-                            android:layout_width="0dp"
-                            android:layout_gravity="end"
-                            android:layout_weight="1"
-                            android:textAlignment="textEnd"
-                            tools:text="Yes" />
-                    </TableRow>
-
-                </TableLayout>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="Attachments"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/assignment_attachments"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Instructions"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/assignment_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="48dp"
-                    android:layout_marginTop="8dp"
-                    android:textSize="12sp" />
-
-            </LinearLayout>
-
-        </ScrollView>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/assignment_submit_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
-            app:srcCompat="@drawable/ic_open_in_new_24dp"
-            android:tint="@color/sakai_medium_silver" >
-
-        </android.support.design.widget.FloatingActionButton>
-
-    </RelativeLayout>
-
-</android.support.v7.widget.CardView>
+</FrameLayout>
 
 
