--- a/app/src/main/res/layout/gradeitem_node.xml
+++ b/app/src/main/res/layout/gradeitem_node.xml
@@ -12,31 +12,30 @@
     <TextView
 
         android:id="@+id/txt_assignment_name"
-        android:layout_width="260dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="left"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:layout_weight="1"
         android:paddingBottom="8dp"
         android:paddingLeft="40dp"
         android:paddingTop="8dp"
-        android:text="assignment"
+        android:text="FINAL EXAM"
         android:textColor="@color/sakai_light_black"
         android:textSize="16sp" />
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/txt_grade"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginRight="8dp"
+        android:layout_weight="1"
         android:gravity="right"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
-        android:text="grade"
+        android:text="h"
         android:textColor="@color/sakai_light_black"
         android:textSize="16sp" />
 
