--- a/app/src/main/res/layout/gradeitem_node.xml
+++ b/app/src/main/res/layout/gradeitem_node.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,32 +12,27 @@
     <TextView
 
         android:id="@+id/txt_assignment_name"
-        android:layout_width="260dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_weight="1"
+        android:paddingRight="4dp"
         android:paddingBottom="8dp"
-        android:paddingLeft="40dp"
-        android:paddingTop="8dp"
-        android:text="assignment"
+        android:paddingLeft="16dp"
+        android:paddingTop="4dp"
+        tools:text="assignment"
         android:textColor="@color/sakai_light_black"
         android:textSize="16sp" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/txt_grade"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
-        android:gravity="right"
+        android:layout_gravity="right"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
-        android:text="grade"
+        tools:text="grade"
         android:textColor="@color/sakai_light_black"
         android:textSize="16sp" />
 
-</android.support.v7.widget.LinearLayoutCompat>
+</LinearLayout>
