--- a/app/src/main/res/layout/activity_nav.xml
+++ b/app/src/main/res/layout/activity_nav.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".NavActivity">
 
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
     <ProgressBar
         android:id="@+id/nav_activity_progressbar"
         android:layout_width="wrap_content"
