--- a/app/src/main/res/layout/fragment_assignment_submission_dialog.xml
+++ b/app/src/main/res/layout/fragment_assignment_submission_dialog.xml
@@ -1,65 +1,54 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:fragment="com.example.development.sakaiclientandroid.fragments.assignments.AssignmentSubmissionDialogFragment"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:fragment="com.example.development.sakaiclientandroid.fragments.assignments.AssignmentSubmissionDialogFragment">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="32dp"
+        android:paddingBottom="8dp"
+        android:text="Submit Assignment"
+        android:background="@color/sakai_medium_red"
+        android:textColor="@color/sakai_medium_silver"
+        android:textStyle="bold"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="32dp"
-            android:paddingBottom="8dp"
-            android:text="Submit Assignment"
-            android:background="@color/sakai_medium_red"
-            android:textColor="@color/sakai_medium_silver"
-            android:textStyle="bold"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="4dp"
+        android:textSize="12sp"
+        android:text="You can submit this assignment from here."
+        android:background="@color/sakai_medium_red"
+        android:textColor="@color/sakai_medium_silver"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="4dp"
-            android:textSize="12sp"
-            android:text="You can submit this assignment from here."
-            android:background="@color/sakai_medium_red"
-            android:textColor="@color/sakai_medium_silver"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="16dp"
+        android:textSize="12sp"
+        android:text="Drag up to view more details, or drag down to close."
+        android:background="@color/sakai_medium_red"
+        android:textColor="@color/sakai_medium_silver"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="16dp"
-            android:textSize="12sp"
-            android:text="Drag up to view more details, or drag down to close."
-            android:background="@color/sakai_medium_red"
-            android:textColor="@color/sakai_medium_silver"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="@drawable/card_header_gradient"/>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="8dp"
-            android:background="@drawable/card_header_gradient"/>
+    <com.example.development.sakaiclientandroid.utils.ui_components.webview.FileCompatWebView
+        android:id="@+id/assignment_submission_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.example.development.sakaiclientandroid.utils.ui_components.webview.FileCompatWebView
-                android:id="@+id/assignment_submission_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-        </android.support.v4.widget.NestedScrollView>
-
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
