--- a/app/src/main/res/layout/fragment_single_assignment.xml
+++ b/app/src/main/res/layout/fragment_single_assignment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:fragment="com.example.development.sakaiclientandroid.fragments.assignments.SingleAssignmentFragment">
+    tools:fragment="com.sakaimobile.development.sakaiclientandroid.fragments.assignments.SingleAssignmentFragment">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
