--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:fragment="com.example.development.sakaiclientandroid.fragments.WebFragment">
+    tools:fragment="com.sakaimobile.development.sakaiclientandroid.fragments.WebFragment">
 
     <com.sakaimobile.development.sakaiclient20.ui.custom_components.FileCompatWebView
         android:id="@+id/data_webview"
