--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.SettingsActivity">
+    tools:context="com.sakaimobile.development.sakaiclient20.ui.SettingsActivity">
 
     <android.support.v7.widget.Toolbar
         android:text="@string/title_settings"
